# movie-recomendation-cpp

./: CMakeLists.txt  main.cpp
dataset/: movies.csv
src/: app.h
src/entities/: MovieRecommander.h  MovieRecommender.h  Movies.h  Users.h
src/enums/: MovieGenre.h
src/importer/: MovieImporter.h
src/interface/: HomeInterface.h  InterfaceColor.h  InterfaceInicial.h  InterfaceOptionType.h  StringInterface.h  UserInterface.h
src/populators/: UserPopulator.cpp  UsersPopulator.h
src/questionator/: Questionator.h
src/questioner/: UsersQuestioner.h
src/utils/: ConsoleColors.h  InterfaceUtils.h  RandomNamesUtil.h  StaticList.h  StringUtils.h
